# cs180-21-taso6

./: .gitignore  .ninja_deps  .ninja_log  BirdRecord.cpp  BirdRecord.h  CMakeCache.txt  CMakeLists.txt  Collection.cpp  Collection.h  List.cpp  List.h  README.md  a.out  accountSystem.cpp  accountSystem.h  build.ninja  clean_eBird_1k.R  cmake_install.cmake  eBird_1k_cleaned.csv  main.cpp  main1.cpp  records.csv
.cmake/api/v1/reply/: cache-v2-d00318bd1b3fadefeb7a.json  cmakeFiles-v1-cfa849e7c13c6dae79f9.json  codemodel-v2-476d40e4e215ac4c70d4.json  codemodel-v2-74cf44dacee671d264f7.json  index-2023-06-02T05-12-08-0409.json  index-2023-06-04T05-15-20-0209.json  target-cs180_21_taso6-Debug-c197ae1eaa02797d79b1.json  target-cs180_21_taso6-Debug-f5ea6f24065d194d0d87.json
Frontend/: addObservation.html  birdpage.html  forgotpass.html  homepage.html  listPage.css  listPage.html  listPage.js  login_frontend.html  profile.html  profilelist.html  profilelist.js  register.html
UI/: accountMenu.h  accountSystem.cpp  accountSystem.h
assets/: allCSV.txt  records.csv
backend/: Initialize.cpp  Initialize.h  User.cpp  User.h  bird_record.cpp  bird_record.h  collection.cpp  collection.h  parse.cpp  parse.h
frontend/: after_login.html  birdpage.html  forgotpass.html  homepage.html  listPage.css  listPage.html  listPage.js  login_frontend.html  profile.html  register.html
